# Zassport

./: .gitignore  Anchor.toml  COMPLETION_SUMMARY.md  DEMO_SCRIPT.md  INTEGRATION_TODO.md  PROJECT_SUMMARY.md  README.md  ROADMAP.md  SECURITY_PRIVACY_EXPLANATION.md  SOLUTION_SUMMARY.md  USER_FLOW_ANALYSIS.md  VIDEO_PRESENTATION_SCRIPT.md  calculate_hashes.js  goal.md  lightprotocol-groth16-solana-8a5edab282632443.txt  package-lock.json  package.json
circuits/: .gitignore
docs/: ADVANCED_ROADMAP.md  COMPLETE_STATUS.md  COMPREHENSIVE_SUMMARY.md  EXECUTIVE_SUMMARY.md  FEATURE_STATUS.md  PHASE2_COMPLETE.md  PHASE2_QUICK_START.md  PRODUCTION_SETUP.md  ROOT_CAUSE_ANALYSIS.md  WEB_FEATURES_COMPLETE.md  WEB_PRODUCTION_SETUP.md  ZK_INTEGRATION_GUIDE.md  deployment.md  program.md  run.md  v.md  zk.md
programs/zassport/: Cargo.toml  build.rs
programs/zassport/src/: errors.rs  lib.rs  zk_verifier.rs
programs/zassport/src/instructions/: advanced.rs  attest_age_proof.rs  attest_nationality_proof.rs  attest_passport.rs  cast_vote.rs  create_proposal.rs  initialize.rs  mod.rs  multi_verifier.rs  register_identity.rs  revocation.rs  set_verifier.rs  social_recovery.rs  update_reputation.rs  verify_age_proof.rs  verify_nationality_proof.rs  verify_proof.rs
programs/zassport/src/state/: advanced.rs  mod.rs  multi_verifier.rs
programs/zassport/src/zk_verifier/: fixtures.rs  test_vectors.rs  verification_keys.rs
programs/zassport/tests/: diagnostic.rs  proof_generator.rs
scripts/: deploy.sh  extract_vk.sh  generate_proof_vectors.js  generate_vk.js  init-verifier.ts  (+2 more)
(+173 files in other folders)
