[package]
name = "zassport"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zassport"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.1"
groth16-solana = "0.0.3"

[dev-dependencies]
solana-bn254 = "2"
ark-bn254 = "0.5"
ark-groth16 = "0.5"
ark-serialize = "0.5"
ark-ff = "0.5"
ark-ec = "0.5"
num-bigint = "0.4"
serde_json = "1.0"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
